Added Gallery carousel

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 </head>
 
 
+
+
 <body>
 
 	<div class="bgimg">
@@ -42,7 +44,7 @@
 						<a href="#news" class="nav-link text-white"> NEWS </a>
 					</li>
 					<li class="navbar-item">
-						<a href="#review" class="nav-link text-white"> GALLERY </a>
+						<a href="#gallery" class="nav-link text-white"> GALLERY </a>
 					</li>
 					<li class="navbar-item">
 						<a href="#about" class="nav-link text-white"> ABOUT US </a>
@@ -67,7 +69,7 @@
 
 	</div>
 
-	<section class="container tech text-center" >
+	<section class="container tech text-center" id="gallery" >
 		<h1> TECH </h1>
 		<p>The latest tech news about the world's best (and sometimes worst) hardware, apps, and much more. From top companies like Google and Apple to tiny startups vying for your attention, TechHub has the latest in what matters in technology daily.</p>
 		
@@ -78,7 +80,7 @@
 				<h2>News</h2>
 			</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto">
+			<div class="col-lg-4 col-md-4 col-sm-4 col-10 d-block m-auto"  onclick="document.location='gallery.html'">
 				<div class="imgsetting d-block m-auto bg-warning"> <i class="fa fa-file-image-o fa-3x text-white"></i></div>
 
 				<h2>Gallery</h2>
@@ -256,7 +258,7 @@
      	<div class="footer">
      		<div class="inner_footer">
      			<div class="logo_container">
-     				<img src="img/Thumbnail/logo.jpg">
+     				<img src="img/Thumbnail/logo.JPG">
      			</div>
 
      			<div class="footer_third">
